--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "js-yaml",
-  "version": "3.11.0",
-  "description": "YAML 1.2 parser and serializer",
+  "name": "js-yaml-parser",
+  "version": "1.0.0",
+  "description": "YAML parser and serializer that allows duplicate keys",
   "keywords": [
     "yaml",
     "parser",
     "serializer",
     "pyyaml"
   ],
-  "homepage": "https://github.com/nodeca/js-yaml",
-  "author": "Vladimir Zapparov <dervus.grim@gmail.com>",
-  "contributors": [
-    "Aleksey V Zapparov <ixti@member.fsf.org> (http://www.ixti.net/)",
-    "Vitaly Puzrin <vitaly@rcdesign.ru> (https://github.com/puzrin)",
-    "Martin Grenfell <martin.grenfell@gmail.com> (http://got-ravings.blogspot.com)"
-  ],
+  "homepage": "",
+  "author": "Pier Castaneda",
   "license": "MIT",
-  "repository": "nodeca/js-yaml",
+  "repository": "AnkRaiza/js-yaml",
   "files": [
     "index.js",
     "lib/",
